# lesta-course

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  docker-build
engine/: CMakeLists.txt  readme.md
engine/include/: canvas.hpp  color.hpp  errors.hpp  event.hpp  glcheck.hpp  iengine.hpp  image_loader.hpp  rect.hpp  shader.hpp  shape.hpp  texture.hpp  transform.hpp  vec.hpp  vertbuf.hpp  vertex.hpp
engine/src/: canvas.cpp  engine.cpp  engine.hpp  event.cpp  glcheck.cpp  raii_wrapper.hpp  shader.cpp  shape.cpp  texture.cpp  transform.cpp  vec.cpp  vertbuf.cpp  vertex.cpp
engine/test/: CMakeLists.txt  fragment-shader.frag  main.cpp  vertex-shader.vert
homework/: CMakeLists.txt
homework/01-hello-world/: CMakeLists.txt  Dockerfile-base  docker-compose.yml
homework/01-hello-world/1-hello-world/: CMakeLists.txt  Dockerfile  main.cpp
homework/01-hello-world/1-hello-world/src/: main.cpp
homework/01-hello-world/2-hello-lib/: CMakeLists.txt
homework/01-hello-world/2-hello-lib/Dockerfiles/: Dockerfile-shared  Dockerfile-static
homework/01-hello-world/2-hello-lib/lib/: CMakeLists.txt
homework/01-hello-world/2-hello-lib/lib/include/: hello.hpp
homework/01-hello-world/2-hello-lib/lib/src/: hello.cpp
homework/01-hello-world/2-hello-lib/src/: main.cpp
homework/01-hello-world/lib/: CMakeLists.txt
homework/01-hello-world/lib/include/: hello.hpp
homework/01-hello-world/lib/src/: hello.cpp
homework/01-hello-world/src/: main.cpp
homework/02-sdl-linking/: CMakeLists.txt
homework/02-sdl-linking/1-sdl-static/: CMakeLists.txt
homework/02-sdl-linking/1-sdl-static/src/: main.cpp
homework/02-sdl-linking/2-sdl-shared/: CMakeLists.txt
homework/02-sdl-linking/3-sdl-api-substitution/: CMakeLists.txt  README.md
homework/02-sdl-linking/3-sdl-api-substitution/src/: main.cpp
homework/03-sdl-hot-nano-engine/: CMakeLists.txt
homework/03-sdl-hot-nano-engine/1-sdl-keyboard-listener/: CMakeLists.txt
homework/03-sdl-hot-nano-engine/1-sdl-keyboard-listener/engine/include/: engine.hpp  event.hpp
homework/03-sdl-hot-nano-engine/1-sdl-keyboard-listener/engine/src/: engine.cpp  event.cpp
homework/03-sdl-hot-nano-engine/1-sdl-keyboard-listener/game/src/: main.cpp
homework/03-sdl-hot-nano-engine/2-in-search-of-sdl-static/: CMakeLists.txt
homework/03-sdl-hot-nano-engine/2-in-search-of-sdl-static/engine/include/: engine.hpp  event.hpp
homework/03-sdl-hot-nano-engine/2-in-search-of-sdl-static/engine/src/: engine.cpp  event.cpp
homework/03-sdl-hot-nano-engine/2-in-search-of-sdl-static/game/src/: main.cpp
homework/03-sdl-hot-nano-engine/3-in-search-of-sdl-shared/: CMakeLists.txt
homework/03-sdl-hot-nano-engine/3-in-search-of-sdl-shared/engine/include/: engine.hpp  event.hpp
homework/03-sdl-hot-nano-engine/3-in-search-of-sdl-shared/engine/src/: engine.cpp  event.cpp
homework/03-sdl-hot-nano-engine/3-in-search-of-sdl-shared/game/src/: main.cpp
homework/03-sdl-hot-nano-engine/4-sdl-hot-reload/: CMakeLists.txt  README.md
homework/03-sdl-hot-nano-engine/4-sdl-hot-reload/engine/include/: event.hpp  iengine.hpp
homework/03-sdl-hot-nano-engine/4-sdl-hot-reload/engine/src/: engine.cpp  engine.hpp  event.cpp
homework/03-sdl-hot-nano-engine/4-sdl-hot-reload/game/src/: main.cpp
homework/04-render-basics/: CMakeLists.txt  incredible-shader.cpp  main.cpp
homework/04-render-basics/1-render-primitives/: CMakeLists.txt  canvas.hpp  color.hpp  image_loader.hpp  incredible_shader.cpp  line_render.cpp  line_render.hpp  main.cpp  main_canvas.cpp  main_line_render.cpp  main_triangle_render.cpp  render.hpp  shader.hpp  test.ppm  triangle_render.cpp  triangle_render.hpp
homework/04-render-basics/breathtaking-images/: indexed-triangle-rasterize.ppm  triangle-rasterize.ppm  triangle-render.ppm  triangle-render.ppm.~1~
homework/04-render-basics/include/: canvas.hpp  color.hpp  image_loader.hpp  line_render.hpp  render.hpp  resource_loader.hpp  shader.hpp  vec.hpp  vertex.hpp
homework/04-render-basics/src/: canvas.cpp  canvas.hpp  color.cpp  color.hpp  line_render.cpp  main_canvas.cpp  resource_loader.cpp  shader.cpp  triangle_render.cpp  vertex.cpp
homework/05-OpenGL-first-step/: CMakeLists.txt
homework/05-OpenGL-first-step/1-hopeful-sky/: CMakeLists.txt  main.cpp
homework/05-OpenGL-first-step/2-triangle-of-madness/: CMakeLists.txt  fragment-shader.frag  main.cpp  raii_wrapper.hpp  vertex-shader.vert
homework/06-and-god-create-sounds/: CMakeLists.txt  main.cpp
nano/: CMakeLists.txt
nano/include/nano/: canvas.hpp  color.hpp  drawable.hpp  engine.hpp  error.hpp  event.hpp  iengine.hpp  image_loader.hpp  imgui_backend.hpp  postman.hpp  rect.hpp  resource_loader.hpp  scene.hpp  shader.hpp  shape.hpp  sound.hpp  soundbuf.hpp  sprite.hpp  texture.hpp  texture2D.hpp  transform.hpp  transform2D.hpp  utils.hpp  vec.hpp  vertbuf.hpp  vertex.hpp
nano/src/: canvas.cpp  engine.cpp  engine.hpp  error.cpp  event.cpp  imconfig.h  imgui_backend.cpp  postman.cpp  resource_loader.cpp  scene.cpp  scope_guard.hpp  shader.cpp  shape.cpp  sound.cpp  soundbuf.cpp  sprite.cpp  texture.cpp  texture2D.cpp  transform.cpp  transform2D.cpp  utils.cpp  vertbuf.cpp
scripts/: docker-build  (+1 more)
tests/: CMakeLists.txt
tests/imgui/: CMakeLists.txt
tests/imgui/first-step/: CMakeLists.txt  fragment-shader.frag  main.cpp  vertex-shader.vert
tests/nano/: CMakeLists.txt  read-file.cpp
tests/nano/transform/: CMakeLists.txt  main.cpp  test.ppm  vertex-shader.vert
tetris/: CMakeLists.txt  main.cpp  nano  specification.md
tetris/android-project/: gradle.properties  local.properties
tetris/android-project/app/: build.gradle
tetris/android-project/app/src/main/: AndroidManifest.xml
tetris/android-project/app/src/main/java/org/home/tetris/: TetrisActivity.java
tetris/android-project/app/src/main/java/org/libsdl/app/: SDLActivity.java
tetris/android-project/gradle/wrapper/: gradle-wrapper.properties
tetris/homework/: Makefile  cmake_install.cmake
tetris/src/: game_scene.cpp  game_scene.hpp  main.cpp  menu_scene.cpp  menu_scene.hpp  tetramino.cpp  tetramino.hpp
(+525 files in other folders)
